--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bin Day</title>
   </head>
-  <body class="bg-black">
+  <body class="bg-black" style="background-color: black;">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
